objects/EWS_Account__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The community contact that was created when this record was processed.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EWS_Accounts</relationshipLabel>
        <relationshipName>EWS_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EWS_User__c</fullName>
        <label>EWS User</label>
        <referenceTo>EWS_User__c</referenceTo>
        <relationshipLabel>EWS_Accounts</relationshipLabel>
        <relationshipName>EWS_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FA_Num__c</fullName>
        <label>FA Num</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Role__c</fullName>
        <label>FA Role</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Error__c</fullName>
        <description>The last error that occurred, if any, when the record was last processed by the TFSC_BatchMigrateEWS batch apex.</description>
        <label>Last Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGUID__c</fullName>
        <label>SGUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>EWS_Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>SGUID__c</columns>
        <columns>FA_Num__c</columns>
        <columns>FA_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EWSA-{000000000}</displayFormat>
        <label>EWS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EWS_Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>